fixed problem with cookies